pods/tomcat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  type: LoadBalancer
  selector:
    app: tomcat-deployment
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30010
