pods/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
  labels:
    name: tomcat-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: tomcat-service
            port:
              number: 8080
